# SistemaEstudiantesMaterias

Sistema/: CMakeLists.txt  README.md  estudiante.c  estudiante.h  fechas.c  fechas.h  lista_estudiantes.c  lista_estudiantes.h  lista_materias.c  lista_materias.h  lista_materiasEnCurso.c  lista_materiasEnCurso.h  main.c  materias.c  materias.h  nodo_estudiante.c  nodo_estudiante.h  nodo_materia.c  nodo_materia.h  nodo_materiaestudiante.c  nodo_materiaestudiante.h
